2007-06-30  Quentin Mathe <qmathe@club-internet.fr

	* Convert Loader*.png into TIFF format. Fix bug #8554.

2007-06-13  Quentin Mathe <qmathe@club-internet.fr

	* Controller.m: Force login window to be centered on the screen.
	* README: Documented ETAllowUserToChooseEnvironmnet key.

2007-05-26  Quentin Mathe <qmathe@club-internet.fr

	* English.lproj/login.gorm: Improved alignment, typography and added 
	sessionText outlet.
	* Controller.h: Added sessionText outlet.
	* Controller.m: Added default ETAllowUserToChooseEnvironment to control 
	session/environment popup button visibility.
	* GDMClient.m: Modified default session to be 'etoile'.

2007-05-02 Yen-Ju Chen <yjchenx at gmail>

	* Use green icon as default button.

2007-04-30 Yen-Ju Chen <yjchenx at gmail>

	* Use 16 steps for login instead of 8 step.
	  Fix bug #8553.
	* etoile_login.sh:
	* Background.m:
	  Include a default image and put an example of loading bundle
	  through arguments instead of user defaults.
	  In this case, there is no need to put GNUstep Default in root
 	  or special users.

2007-04-29 Yen-Ju Chen <yjchenx at gmail>

	* Initial import.
	* Clean up.
	* Support sessions.
