@@ -22,5 +22,7 @@ Login_LOCALIZED_RESOURCE_FILES = login.gorm
 
 Login_MAIN_MODEL_FILE = login.gorm
 
+ADDITIONAL_LDFLAGS = -lX11
+
 include $(GNUSTEP_MAKEFILES)/application.make
 -include ../../../etoile.make
